# ascent-trame

./: .gitignore  .gitmodules
ascenttrame/: consumer.py  producer.py  tramestreamer.py
examples/kripke/: CMakeLists.txt  ascent_actions.yaml  cinema.yaml
examples/kripke/ascent/: ascent_trame_bridge.py
examples/kripke/trame/: trame_app.py
examples/lbm-cfd/ascent/: ascent_trame_bridge.py
examples/lbm-cfd/src/: main.cpp
examples/lbm-cfd/trame/: trame_app.py  trame_app_720w.py
examples/nekIBM-ascent/: sourceme
examples/nekIBM-ascent/core/: makefile.template
examples/nekIBM-ascent/lidar_case/: .state  SESSION.NAME  ascent_actions.yaml  cinema.yaml  clean.sh  compiler.out  endtime.yaml  generate_particles1.py  makefile  midtime.yaml  nek5000  replay.yaml  run_crux.sh  starttime.yaml  uniform.f  uniform.par  uniform.usr  visnek.yaml
examples/nekIBM-ascent/lidar_case/ascent/: ascent_trame_bridge.py
examples/nekIBM-ascent/lidar_case/trame/: trame_app.py
examples/nekIBM-ascent/tools/: maketools
examples/nekIBM-ascent/tools/prenek/: xdriver.c
scripts/: setup-crux.sh
